<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#51D4E3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#B8D6DA"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:gravity="center"
            android:text="@string/tvTituloA"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/ivImg1"
            android:layout_width="156dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ivImg2"
            app:srcCompat="@drawable/img2" />

        <TextView
            android:id="@+id/tvSub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/tvSubTitulo"
            android:textColor="#101010"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/ivImg2"
            android:layout_width="202dp"
            android:layout_height="193dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/ivImg3"
            app:srcCompat="@drawable/img3" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>